--- a/src/calibre/gui2/convert/pdf_input.ui
+++ b/src/calibre/gui2/convert/pdf_input.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>413</width>
     <height>300</height>
    </rect>
   </property>
@@ -23,19 +23,6 @@
       <cstring>opt_unwrap_factor</cstring>
      </property>
     </widget>
-   </item>
-   <item row="2" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>213</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item row="0" column="1">
     <widget class="QDoubleSpinBox" name="opt_unwrap_factor">
@@ -54,6 +41,118 @@
     <widget class="QCheckBox" name="opt_no_images">
      <property name="text">
       <string>No &amp;images</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_t">
+     <property name="text">
+      <string>Remove headers at &amp;top of page by:</string>
+     </property>
+     <property name="buddy">
+      <cstring>opt_pdf_header_skip</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QSpinBox" name="opt_pdf_header_skip">
+     <property name="specialValueText">
+      <string>Automatically</string>
+     </property>
+     <property name="suffix">
+      <string> px</string>
+     </property>
+     <property name="minimum">
+      <number>-1</number>
+     </property>
+     <property name="maximum">
+      <number>99999</number>
+     </property>
+     <property name="value">
+      <number>-1</number>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label_b">
+     <property name="text">
+      <string>Remove footers at &amp;bottom of page by:</string>
+     </property>
+     <property name="buddy">
+      <cstring>opt_pdf_footer_skip</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QSpinBox" name="opt_pdf_footer_skip">
+     <property name="specialValueText">
+      <string>Automatically</string>
+     </property>
+     <property name="suffix">
+      <string> px</string>
+     </property>
+     <property name="minimum">
+      <number>-1</number>
+     </property>
+     <property name="maximum">
+      <number>99999</number>
+     </property>
+     <property name="value">
+      <number>-1</number>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_rt">
+     <property name="text">
+      <string>Regular expression to remove &amp;header at top of page:</string>
+     </property>
+     <property name="buddy">
+      <cstring>opt_pdf_header_regex</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QLineEdit" name="opt_pdf_header_regex">
+     <property name="clearButtonEnabled">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <widget class="QLabel" name="label_rb">
+     <property name="text">
+      <string>Regular expression to remove &amp;footer at bottom of page:</string>
+     </property>
+     <property name="buddy">
+      <cstring>opt_pdf_footer_regex</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QLineEdit" name="opt_pdf_footer_regex">
+     <property name="clearButtonEnabled">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QCheckBox" name="opt_new_pdf_engine">
+     <property name="text">
+      <string>&amp;New, experimental, PDF conversion Engine</string>
      </property>
     </widget>
    </item>
